# bag_reader

./: CMakeLists.txt  package.xml  plugins.xml
config/: bag_reader.yaml
include/: BagReader.h
launch/: bag_reader.launch
octave/: getMetrics.m
src/: BagReader.cpp
